@@ -10,6 +10,11 @@ domibus.msh.retry.tolerance=10800000
 #Should unrecoverable errors should be retried or not
 domibus.dispatch.ebms.error.unrecoverable.retry=true
 domibus.smlzone=acc.edelivery.tech.ec.europa.eu
+
+#Apart from validating response of signer certificates against the truststore, the Oasis Dynamic Discovery Client gives
+#the possibility to add (optional) a regular expression to validate any certificate metadata related to the subject of the signer certificate.
+#domibus.dynamic.discovery.oasisclient.regexCertificateSubjectValidation="^.*EHEALTH_SMP.*$"
+
 domibus.backend.jmsInQueue=domibus.backend.jms.inQueue
 domibus.jms.queue.pull=domibus.internal.pull.queue
 domibus.deployment.clustered=false
