@@ -218,7 +218,7 @@
         <dependency>
             <groupId>eu.europa.ec.dynamic-discovery</groupId>
             <artifactId>dynamic-discovery-client</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
         </dependency>
         <!-- End Difi libraries -->
 
