@@ -77,6 +77,30 @@ public class DynamicDiscoveryServiceOASISTest {
         }};
     }
 
+    @Test
+    public void testLookupInformationRegexMatch(final @Capturing DynamicDiscovery smpClient) throws Exception {
+        new NonStrictExpectations() {{
+            domibusProperties.getProperty(DynamicDiscoveryService.SMLZONE_KEY);
+            result = TEST_SML_ZONE;
+
+            domibusProperties.getProperty(DynamicDiscoveryService.DYNAMIC_DISCOVERY_CERT_REGEX);
+            result = "^.*EHEALTH_SMP.*$";
+
+            ServiceMetadata sm = buildServiceMetadata();
+            smpClient.getServiceMetadata((ParticipantIdentifier) any, (DocumentIdentifier) any);
+            result = sm;
+
+        }};
+
+        EndpointInfo endpoint = dynamicDiscoveryServiceOASIS.lookupInformation(TEST_RECEIVER_ID, TEST_RECEIVER_ID_TYPE, TEST_ACTION_VALUE, TEST_SERVICE_VALUE, TEST_SERVICE_TYPE);
+        assertNotNull(endpoint);
+        assertEquals(ADDRESS, endpoint.getAddress());
+
+        new Verifications() {{
+            smpClient.getServiceMetadata((ParticipantIdentifier) any, (DocumentIdentifier) any);
+        }};
+    }
+
     @Test(expected = ConfigurationException.class)
     public void testLookupInformationNotFound(final @Capturing DynamicDiscovery smpClient) throws Exception {
         new NonStrictExpectations() {{
@@ -91,9 +115,27 @@ public class DynamicDiscoveryServiceOASISTest {
         dynamicDiscoveryServiceOASIS.lookupInformation(TEST_RECEIVER_ID, TEST_RECEIVER_ID_TYPE, TEST_ACTION_VALUE, TEST_INVALID_SERVICE_VALUE, TEST_SERVICE_TYPE);
     }
 
+    @Test
+    public void testLookupInformationNotFoundMessage(final @Capturing DynamicDiscovery smpClient) throws Exception {
+        new NonStrictExpectations() {{
+            domibusProperties.getProperty(DynamicDiscoveryService.SMLZONE_KEY);
+            result = TEST_SML_ZONE;
+
+            ServiceMetadata sm = buildServiceMetadata();
+            smpClient.getServiceMetadata((ParticipantIdentifier) any, (DocumentIdentifier) any);
+            result = sm;
+        }};
+        try {
+
+            dynamicDiscoveryServiceOASIS.lookupInformation(TEST_RECEIVER_ID, TEST_RECEIVER_ID_TYPE, TEST_ACTION_VALUE, TEST_INVALID_SERVICE_VALUE, TEST_SERVICE_TYPE);
+        } catch (ConfigurationException cfe) {
+            Assert.assertTrue(cfe.getMessage().contains("Could not fetch metadata for: urn:romania:ncpb"));
+        }
+    }
+
     private ServiceMetadata buildServiceMetadata() throws Exception {
 
-        InputStream inputStream = getClass().getResourceAsStream("../ServiceMetadataResponseOASIS.xml");
+        InputStream inputStream = getClass().getResourceAsStream("../SignedServiceMetadataResponseOASIS.xml");
         FetcherResponse fetcherResponse = new FetcherResponse(inputStream);
         DocumentBuilderFactory documentBuilderFactory = DocumentBuilderFactory.newInstance();
         documentBuilderFactory.setNamespaceAware(true);
@@ -103,11 +145,8 @@ public class DynamicDiscoveryServiceOASISTest {
 
         Document document = documentBuilderFactory.newDocumentBuilder().parse(fetcherResponse.getInputStream());
         Object result = ((JAXBElement) unmarshaller.unmarshal(document)).getValue();
-        if (result instanceof org.oasis_open.docs.bdxr.ns.smp._2016._05.SignedServiceMetadataType) {
-            result = ((org.oasis_open.docs.bdxr.ns.smp._2016._05.SignedServiceMetadataType) result).getServiceMetadata();
-        }
-        org.oasis_open.docs.bdxr.ns.smp._2016._05.ServiceMetadataType unmarshalledServiceMetadata = (org.oasis_open.docs.bdxr.ns.smp._2016._05.ServiceMetadataType) result;
-        ServiceMetadata serviceMetadata = new ServiceMetadata(null, unmarshalledServiceMetadata.getServiceInformation());
+        SignedServiceMetadataType signedServiceMetadataType = (SignedServiceMetadataType) result;
+        ServiceMetadata serviceMetadata = new ServiceMetadata(signedServiceMetadataType, null, "");
         return serviceMetadata;
     }
 
@@ -130,10 +169,10 @@ public class DynamicDiscoveryServiceOASISTest {
 
         }};
 
-        //EndpointInfo endpointInfo = dynamicDiscoveryServiceOASIS.lookupInformation("urn:romania:ncpb", "ehealth-actorid-qns", "ehealth-resid-qns::urn::epsos##services:extended:epsos::107", "urn:www.cenbii.eu:profile:bii04:ver1.0", "cenbii-procid-ubl");
+        //EndpointInfo endpointInfo = dynamicDiscoveryServiceOASIS.lookupInformation("urn:romania:ncpb", "ehealth-actorid-qns", "ehealth-resid-qns::urn::epsos##services:extended:epsos::107aa", "urn:www.cenbii.eu:profile:bii04:ver1.0", "cenbii-procid-ubl");
         EndpointInfo endpointInfo = dynamicDiscoveryServiceOASIS.lookupInformation("0007:9340033829test2", "ehealth-actorid-qns", "busdox-docid-qns::urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2::CreditNote##urn:www.cenbii.eu:transaction:biitrns014:ver2.0:extended:urn:www.peppol.eu:bis:peppol5a:ver2.0::2.1", "urn:www.cenbii.eu:profile:bii05:ver2.0", "cenbii-procid-ubl");
         System.out.println(endpointInfo.getAddress());
         Assert.assertNotNull(endpointInfo);
-        Assert.assertEquals("http://localhost:8180/domibus/services/msh", endpointInfo.getAddress());
+        Assert.assertEquals("http://40.118.20.112:8995/domibus/services/msh", endpointInfo.getAddress());
     }
 }
